# 1_warmup

./: P1_bisect_test_cases.ipynb  P1_warmup_tlyle.ipynb  README.md  pyproject.toml  tests.yml  tl_bisection.py
src/: tl_bisect
